--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 
 <h1>Hello world!</h1>
+<div><img src="image_hello_world.jpg" alt="Hello World from Space" style="width:600px;max-width:960px"/></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
 
